@@ -1352,29 +1352,44 @@ seeder::
 
 *aria2.tellActive*
 
-This method returns the list of active downloads.  The respose is of
+This method returns the list of active downloads.  The response is of
 type array and its element is the same struct returned by
 *aria2.tellStatus* method.
 
 *aria2.tellWaiting* 'offset, num'
 
-This method returns the list of waiting download in the range of
-['offset', 'offset'+'num'). 'offset' is of type integer and specifies
-the offset from the download waiting at the front. 'num' is of type
-integer and specifies the number of downloads to be returned. For
-example, imagine that three downloads "A","B" and "C" are waiting in
-this order. aria2.tellWaiting(0, 1) returns "A". aria2.tellWaiting(1,
-2) returns "B" and "C".  The respose is of type array and its element
-is the same struct returned by *aria2.tellStatus* method.
+This method returns the list of waiting download.  'offset' is of type
+integer and specifies the offset from the download waiting at the
+front. 'num' is of type integer and specifies the number of downloads
+to be returned.
+
+If offset is a positive integer, this method returns downloads in the
+range of ['offset', 'offset'+'num').
+
+'offset' can be a negative integer. 'offset' == -1 points last
+download in the waiting queue and 'offset' == -2 points the download
+before the last download, and so on. The downloads in the response are
+in reversed order.
+
+For example, imagine that three downloads "A","B" and "C" are waiting
+in this order. aria2.tellWaiting(0, 1) returns
+["A"]. aria2.tellWaiting(1, 2) returns ["B", "C"].
+aria2.tellWaiting(-1, 2) returns ["C", "B"].
+
+The response is of type array and its element is the same struct
+returned by *aria2.tellStatus* method.
 
 *aria2.tellStopped* 'offset, num'
 
-This method returns the list of stopped download in the range of
-['offset', 'offset'+'num'). 'offset' is of type integer and specifies
-the offset from the oldest download. 'num' is of type integer and
-specifies the number of downloads to be returned.  The respose is of
-type array and its element is the same struct returned by
-*aria2.tellStatus* method.
+This method returns the list of stopped download.  'offset' is of type
+integer and specifies the offset from the oldest download. 'num' is of
+type integer and specifies the number of downloads to be returned.
+
+'offset' and 'num' have the same semantics as *aria2.tellWaiting*
+method.
+
+The response is of type array and its element is the same struct
+returned by *aria2.tellStatus* method.
 
 *aria2.changePosition* 'gid, pos, how'
 
